# bma

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  oauth.py  pyproject.toml
.github/workflows/: tox.yml
docker/: .env.dev  Dockerfile  compose.yaml
src/: manage.py
src/albums/: admin.py  api.py  apps.py  filters.py  models.py  schema.py  tables.py  tests.py  urls.py  views.py
src/albums/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_remove_album_invisible_album_deleted_and_more.py  0005_alter_album_options.py
src/albums/templates/: album_detail.html  album_form.html  album_list.html
src/audios/: admin.py  apps.py  models.py  schema.py
src/audios/migrations/: 0001_initial.py  0002_initial.py
src/audios/templates/: audios_manage_list.html
src/bma/: .env.dist  api.py  asgi.py  environment_settings.py.ci  environment_settings.py.dist  settings.py  urls.py  wsgi.py
src/bornhack_allauth_provider/: adapters.py  apps.py  client.py  provider.py  urls.py  views.py
src/documents/: admin.py  apps.py  models.py  schema.py
src/documents/migrations/: 0001_initial.py  0002_initial.py
src/documents/templates/: documents_manage_list.html
src/files/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  schema.py  tables.py  tests.py  urls.py  validators.py  views.py
src/files/migrations/: 0001_initial.py  0002_initial.py  0004_alter_basefile_options_alter_basefile_file_size_and_more.py  0005_alter_basefile_options_alter_basefile_status.py  0006_alter_basefile_options.py  0007_rename_source_basefile_original_source.py  0008_rename_owner_basefile_uploader.py
src/files/templates/: delete.html  detail.html  file_list.html  files_approval_confirm.html  list.html  update.html  upload.html
src/frontpage/: apps.py  urls.py  views.py
src/frontpage/templates/: frontpage.html
src/pictures/: admin.py  apps.py  models.py  schema.py
src/pictures/migrations/: 0001_initial.py  0002_initial.py
src/pictures/templates/: pictures_manage_list.html
src/requirements/: production.txt
src/static_src/css/: bma.css
src/static_src/js/: bma.js  filebrowser.js  splide-custom-album.js
src/templates/: base.html
src/templates/allauth/elements/: button.html
src/templates/allauth/layouts/: entrance.html  manage.html
src/users/: adapter.py  admin.py  apps.py  factories.py  models.py  sentinel.py
src/users/migrations/: 0001_initial.py  0002_user_is_bma_creator_user_is_bma_curator_and_more.py  0003_remove_user_is_bma_creator_and_more.py  0004_alter_user_description.py
src/utils/: admin.py  api.py  apps.py  filefield.py  filters.py  middleware.py  models.py  parser.py  permissions.py  request.py  schema.py  slugify.py  tests.py  upload.py  views.py
src/utils/migrations/: 0001_initial.py
src/utils/templatetags/: bma_utils.py  querystring.py
src/videos/: admin.py  apps.py  models.py  schema.py
src/videos/migrations/: 0001_initial.py
src/videos/templates/: videos_manage_list.html
src/widgets/: apps.py  urls.py  views.py
